# penguins

./: .gitignore  CMakeLists.txt  Define.h  FileHandler.c  FileHandler.h  Init.c  Init.h  Loop.c  Loop.h  Movement.c  Movement.h  Phase_Cleanup.c  Phase_Cleanup.h  Phase_Init.c  Phase_Init.h  Phase_Loop.c  Phase_Loop.h  Phase_Movement.c  Phase_Movement.h  Phase_Placement.c  Phase_Placement.h  Placement.c  Placement.h  README.md  System.c  System.h  board.txt  board1.txt  main.c
